# iVRG-LNS

./: CMakeLists.txt  README.md  install.bat  mainSteelMillSlab.cpp  readyToRun.bat  script1.run  script10.run  script11.run  script12.run  script13.run  script14.run  script15.run  script2.run  script3.run  script4.run  script5.run  script6.run  script7.run  script8.run  script9.run
base/: Parameter.h
class/: LNSModel.cpp  LNSOptions.cpp  SteelMillSlabProblem.cpp  SteelMillSlabProblem.h
